// Campus Maintenance Complaint Management System
// Import at https://dbdiagram.io to view/export PNG → save as assets/erd.png

Table USERS {
  user_id       int         [pk, increment]
  name          varchar(100) [not null]
  roll_no       varchar(20)  [unique]
  email         varchar(100) [unique, not null]
  role          varchar(20)  [not null, note: 'student | worker | supervisor | admin']
}

Table LOCATIONS {
  location_id   int          [pk, increment]
  building      varchar(50)  [not null]
  floor         varchar(10)  [not null]
  room_no       varchar(20)  [not null]
  location_type varchar(30)  [not null, note: 'classroom | lab | hostel | office | washroom | corridor']
}

Table COMPLAINTS {
  complaint_id  int          [pk, increment]
  student_id    int          [not null, ref: > USERS.user_id]
  location_id   int          [not null, ref: > LOCATIONS.location_id]
  category      varchar(50)  [not null, note: 'electrical | plumbing | furniture | it | cleaning | other']
  priority      varchar(10)  [not null, note: 'urgent | medium | low']
  description   varchar(500) [not null]
  status        varchar(20)  [not null, default: 'submitted', note: 'submitted | assigned | in_progress | resolved | closed']
  created_at    timestamp    [not null, default: `SYSTIMESTAMP`]
  sla_deadline  timestamp
  resolved_at   timestamp
}

Table WORKERS {
  worker_id          int          [pk, increment]
  user_id            int          [not null, unique, ref: > USERS.user_id]
  specialization     varchar(50)  [not null]
  performance_score  number(5,2)  [default: 0]
  is_available       char(1)      [default: 'Y', note: 'Y | N']
}

Table ASSIGNMENTS {
  assignment_id  int          [pk, increment]
  complaint_id   int          [not null, ref: > COMPLAINTS.complaint_id]
  worker_id      int          [not null, ref: > WORKERS.worker_id]
  assigned_by    int          [not null, ref: > USERS.user_id]
  assigned_at    timestamp    [not null, default: `SYSTIMESTAMP`]
  started_at     timestamp
  completed_at   timestamp
  repair_cost    number(10,2) [default: 0]
}

Table STATUS_LOG {
  log_id        int          [pk, increment]
  complaint_id  int          [not null, ref: > COMPLAINTS.complaint_id]
  old_status    varchar(20)
  new_status    varchar(20)  [not null]
  changed_by    int          [ref: > USERS.user_id]
  changed_at    timestamp    [not null, default: `SYSTIMESTAMP`]
  note          varchar(200)
}

Table FEEDBACK {
  feedback_id   int          [pk, increment]
  complaint_id  int          [not null, unique, ref: > COMPLAINTS.complaint_id]
  student_id    int          [not null, ref: > USERS.user_id]
  rating        number(1)    [not null, note: '1-5']
  feedback_comment varchar(300)
  submitted_at  timestamp    [not null, default: `SYSTIMESTAMP`]
}

Table CHRONIC_FLAGS {
  flag_id         int          [pk, increment]
  location_id     int          [not null, ref: > LOCATIONS.location_id]
  category        varchar(50)  [not null]
  complaint_count number       [not null]
  flagged_at      timestamp    [not null, default: `SYSTIMESTAMP`]
}

Table MAINTENANCE_REPORTS {
  report_id           int          [pk, increment]
  month               number(2)    [not null]
  year                number(4)    [not null]
  generated_at        timestamp    [not null, default: `SYSTIMESTAMP`]
  total_complaints    number       [not null]
  resolved_count      number       [not null]
  avg_resolution_hrs  number(8,2)
  total_cost          number(12,2) [default: 0]
}
